Docs update for client-api
